--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.18",
     "@types/html2canvas": "^0.5.35",
     "@types/node": "^22.10.0",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
